EnglishPremiereLeague-DB-Front-End worked on front end for hours trying to link modals to database no luck not fully functional cant send data input inside modals to api

--- a/index.html
+++ b/index.html
@@ -13,123 +13,196 @@
     </head>
     <body>
       <h1> ENGLISH PREMIER LEAGUE STANDINGS </h1>
-      <!-- Modal -->
       <!--Modal: Login / Register Form-->
-   <div class="modal fade" id="modalLRForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-     <div class="modal-dialog cascading-modal" role="document">
-       <!--Content-->
+      <div class="modal fade" id="modalLRForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog cascading-modal" role="document">
+          <!--Content-->
+        <div class="modal-content" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGOrWwe4sr7Hc2l-B-hw2GFR0w3G50kblfIiS6TDsZPemlUCVo'">
 
-       <div class="modal-content" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGOrWwe4sr7Hc2l-B-hw2GFR0w3G50kblfIiS6TDsZPemlUCVo'">
-<!--
+            <!--Modal cascading tabs-->
+            <div class="modal-c-tabs">
 
- #<div class="modal-content card card-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table%20(7).jpg');"> -->
-         <!--Modal cascading tabs-->
-         <div class="modal-c-tabs">
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs md-tabs tabs-2 light-blue darken-3" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab"><i class="fa fa-user mr-1"></i>
+                    Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-toggle="tab" href="#panel8" role="tab"><i class="fa fa-user-plus mr-1"></i>
+                    Register</a>
+                </li>
+              </ul>
 
-           <!-- Nav tabs -->
-           <ul class="nav nav-tabs md-tabs tabs-2 light-blue darken-3" role="tablist">
-             <li class="nav-item">
-               <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab"><i class="fa fa-user mr-1"></i>
-                 Login</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" data-toggle="tab" href="#panel8" role="tab"><i class="fa fa-user-plus mr-1"></i>
-                 Register</a>
-             </li>
-           </ul>
+              <!-- Tab panels -->
+              <div class="tab-content">
+                <!--Panel 7-->
+                <div class="tab-pane fade in show active" id="panel7" role="tabpanel">
 
-           <!-- Tab panels -->
-           <div class="tab-content">
-             <!--Panel 7-->
-             <!-- #<div class="modal-content card card-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table%20(7).jpg');"> -->
-             <div class="tab-pane fade in show active" id="panel7" role="tabpanel">
+                  <!--Body-->
+                  <div class="modal-body mb-1">
+                    <div class="md-form form-sm mb-5">
+                      <i class="fa fa-envelope prefix"></i>
+                      <input type="email" id="modalLRInput10" class="form-control form-control-sm validate">
+                      <label data-error="wrong" data-success="right" for="modalLRInput10">Your email</label>
+                    </div>
 
-               <!--Body-->
-               <div class="modal-body mb-1">
-                 <div class="md-form form-sm mb-5">
-                   <i class="fa fa-envelope prefix"></i>
-                   <input type="email" id="modalLRInput10" class="form-control form-control-sm validate">
-                   <label data-error="wrong" data-success="right" for="modalLRInput10">Your email</label>
-                 </div>
+                    <div class="md-form form-sm mb-4">
+                      <i class="fa fa-lock prefix"></i>
+                      <input type="password" id="modalLRInput11" class="form-control form-control-sm validate">
+                      <label data-error="wrong" data-success="right" for="modalLRInput11">Your password</label>
+                    </div>
+                    <div class="text-center mt-2">
+                      <button class="btn btn-info">Log in <i class="fa fa-sign-in ml-1"></i></button>
+                    </div>
+                  </div>
+                  <!--Footer-->
+                  <div class="modal-footer">
+                    <div class="options text-center text-md-right mt-1">
+                      <p>Not a member? <a href="#" class="blue-text">Sign Up</a></p>
+                      <p>Forgot <a href="#" class="blue-text">Password?</a></p>
+                    </div>
+                    <button type="button" class="btn btn-outline-info waves-effect ml-auto" data-dismiss="modal">Close</button>
+                  </div>
 
-                 <div class="md-form form-sm mb-4">
-                   <i class="fa fa-lock prefix"></i>
-                   <input type="password" id="modalLRInput11" class="form-control form-control-sm validate">
-                   <label data-error="wrong" data-success="right" for="modalLRInput11">Your password</label>
-                 </div>
-                 <div class="text-center mt-2">
-                   <button class="btn btn-info">Log in <i class="fa fa-sign-in ml-1"></i></button>
-                 </div>
-               </div>
-               <!--Footer-->
-               <div class="modal-footer">
-                 <div class="options text-center text-md-right mt-1">
-                   <p>Not a member? <a href="#" class="blue-text">Sign Up</a></p>
-                   <p>Forgot <a href="#" class="blue-text">Password?</a></p>
-                 </div>
-                 <button type="button" class="btn btn-outline-info waves-effect ml-auto" data-dismiss="modal">Close</button>
-               </div>
+                </div>
+                <!--/.Panel 7-->
 
-             </div>
-             <!--/.Panel 7-->
+                <!--Panel 8-->
+                <div class="tab-pane fade" id="panel8" role="tabpanel">
 
-             <!--Panel 8-->
-             <div class="tab-pane fade" id="panel8" role="tabpanel">
+                  <!--Body-->
+                  <div class="modal-body">
+                    <div class="md-form form-sm mb-5">
+                      <i class="fa fa-envelope prefix"></i>
+                      <input type="email" id="modalLRInput12" class="form-control form-control-sm validate">
+                      <label data-error="wrong" data-success="right" for="modalLRInput12">Your email</label>
+                    </div>
 
-               <!--Body-->
-               <div class="modal-body">
+                    <div class="md-form form-sm mb-5">
+                      <i class="fa fa-lock prefix"></i>
+                      <input type="password" id="modalLRInput13" class="form-control form-control-sm validate">
+                      <label data-error="wrong" data-success="right" for="modalLRInput13">Your password</label>
+                    </div>
 
-               <form id= "sign-up">
-              <fieldset>
-                 <div class="md-form form-sm mb-5">
-                   <i class="fa fa-envelope prefix"></i>
-                   <input type="email" id="modalLRInput12" class="form-control form-control-sm validate">
-                   <label data-error="wrong" data-success="right" for="modalLRInput12">Your email</label>
-                 </div>
+                    <div class="md-form form-sm mb-4">
+                      <i class="fa fa-lock prefix"></i>
+                      <input type="password" id="modalLRInput14" class="form-control form-control-sm validate">
+                      <label data-error="wrong" data-success="right" for="modalLRInput14">Repeat password</label>
+                    </div>
 
-                 <div class="md-form form-sm mb-5">
-                   <i class="fa fa-lock prefix"></i>
-                   <input type="password" id="modalLRInput13" class="form-control form-control-sm validate">
-                   <label data-error="wrong" data-success="right" for="modalLRInput13">Your password</label>
-                 </div>
+                    <div class="text-center form-sm mt-2">
+                      <button class="btn btn-info">Sign up <i class="fa fa-sign-in ml-1"></i></button>
+                    </div>
 
-                 <div class="md-form form-sm mb-4">
-                   <i class="fa fa-lock prefix"></i>
-                   <input type="password" id="modalLRInput14" class="form-control form-control-sm validate">
-                   <label data-error="wrong" data-success="right" for="modalLRInput14">Repeat password</label>
-                 </div>
+                  </div>
+                  <!--Footer-->
+                  <div class="modal-footer">
+                    <div class="options text-right">
+                      <p class="pt-1">Already have an account? <a href="#" class="blue-text">Log In</a></p>
+                    </div>
+                    <button type="button" class="btn btn-outline-info waves-effect ml-auto" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+                <!--/.Panel 8-->
+              </div>
 
-                 <div class="text-center form-sm mt-2">
-                   <button id="signUpModal" class="btn btn-info">Sign up <i class="fa fa-sign-in ml-1"></i></button>
-                 </div>
-                </fieldset>
-                </form>
-<!--
-                 <div class="text-center form-sm mt-2">
-                   <button id="sign-up" class="btn btn-info">Sign up <i class="fa fa-sign-in ml-1"></i></button>
-                 </div> -->
+            </div>
+          </div>
+          <!--/.Content-->
+        </div>
+      </div>
+      <!--Modal: Login / Register Form-->
 
-               </div>
-               <!--Footer-->
-               <div class="modal-footer">
-                 <div class="options text-right">
-                   <p class="pt-1">Already have an account? <a href="#" class="blue-text">Log In</a></p>
-                 </div>
-                 <button type="button" class="btn btn-outline-info waves-effect ml-auto" data-dismiss="modal">Close</button>
-               </div>
-             </div>
-             <!--/.Panel 8-->
-           </div>
+      <div class="text-center">
+        <a href="" class="btn btn-default btn-rounded my-3" data-toggle="modal" data-target="#modalLRForm">LogIn/Register</a>
+      </div>
 
-         </div>
-       </div>
-       <!--/.Content-->
-     </div>
-   </div>
-   <!--Modal: Login / Register Form-->
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#teamModal" data-whatever="TeamsModel">Teams</button>
 
-   <div class="text toBottom">
-     <a href="" class="btn btn-default btn-rounded my-3" data-toggle="modal" data-target="#modalLRForm">LogIn/Register</a>
-   </div>
+      <div class="modal fade" id="teamModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+#
+        <div class="modal-dialog" role="document">
+          <div class="modal-content1" style="background-image: url('https://bm23sportsreviews.files.wordpress.com/2018/08/premier-league-18-19.jpg'">
+            <div class="modal-header">
+              <h5 class="modal-title" id="TeamsModalLabel">Teams</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="recipient-name" class="col-form-label">Team Name:</label>
+                    <textarea class="form-control" id="message-text1#"></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="col-form-label"> Team Stadium Location:</label>
+                   <textarea class="form-control" id="message-text2#"></textarea>
+                </div>
+             <div class="form-group">
+                  <label for="message-text" class="col-form-label">Team Standing:</label>
+                 <textarea class="form-control" id="message-text3#"></textarea>
+                </div>
+             </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="edit1">Edit Entry</button>
+              <button type="button" class="btn btn-primary" id="submit1">Submit Entry</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+      <button type="button" class="btn btn-primary" id="playerbuttonmodal" data-toggle="modal" data-target="#playerModal" data-whatever="PlayersModel">Players</button>
+
+      <div class="modal fade" id="playerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+#
+        <div class="modal-dialog" role="document">
+          <div class="modal-content2" style="background-image: url('https://e3.365dm.com/17/10/1096x616/skysports-clinical-graphic-medley-pl-lukaku-kane-salah-jesus-morata_4126093.jpg?20171012080308'">
+            <div class="modal-header">
+              <h5 class="modal-title" id="PlayersModalLabel">Players</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="recipient-name" class="col-form-label">Player First Name:</label>
+                   <textarea class="form-control" id="message-text1"></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="col-form-label"> Player Last Location:</label>
+                   <textarea class="form-control" id="message-text2"></textarea>
+                </div>
+             <div class="form-group">
+                  <label for="message-text" class="col-form-label"> Player Age :</label>
+                  <textarea class="form-control" id="message-text3"></textarea>
+                </div>
+            <div class="form-group">
+                  <label for="message-text" class="col-form-label"> Player Position :</label>
+                  <textarea class="form-control" id="message-text4"></textarea>
+                </div>
+               <div class="form-group">
+                  <label for="message-text" class="col-form-label"> Goals :</label>
+                    <textarea class="form-control" id="message-text5"></textarea>
+
+                </div>
+             </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="edit2">Edit Entry</button>
+              <button type="button" class="btn btn-primary" id="submit2">Submit Entry</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
    </body>
    </html>
