--- a/index.html
+++ b/index.html
@@ -118,12 +118,11 @@
         <a href="" class="btn btn-default btn-rounded my-3" data-toggle="modal" data-target="#modalLRForm">LogIn/Register</a>
       </div>
 
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#teamModal" data-whatever="TeamsModel">Teams</button>
 
       <div class="modal fade" id="teamModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 #
         <div class="modal-dialog" role="document">
-          <div class="modal-content1" style="background-image: url('https://bm23sportsreviews.files.wordpress.com/2018/08/premier-league-18-19.jpg'">
+          <div class="modal-content1 model-content"  style="background-image: url('https://bm23sportsreviews.files.wordpress.com/2018/08/premier-league-18-19.jpg'">
             <div class="modal-header">
               <h5 class="modal-title" id="TeamsModalLabel">Teams</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -163,7 +162,7 @@
       <div class="modal fade" id="playerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 #
         <div class="modal-dialog" role="document">
-          <div class="modal-content2" style="background-image: url('https://e3.365dm.com/17/10/1096x616/skysports-clinical-graphic-medley-pl-lukaku-kane-salah-jesus-morata_4126093.jpg?20171012080308'">
+          <div class="modal-content2 modal-content" style="background-image: url('https://e3.365dm.com/17/10/1096x616/skysports-clinical-graphic-medley-pl-lukaku-kane-salah-jesus-morata_4126093.jpg?20171012080308'">
             <div class="modal-header">
               <h5 class="modal-title" id="PlayersModalLabel">Players</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -203,6 +202,7 @@
           </div>
         </div>
       </div>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#teamModal" data-whatever="TeamsModel">Teams</button>
 
    </body>
    </html>
