--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <input type="submit"  value="Log Out!"/>
       </fieldset>
     </form>
-<div id='signInResults'><div>
+<div id='signInResults'></div>
 
 <div id='showTeamResults'></div>
     <h1>EnglishPremiereLeague TEAMS</h1>
